--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,27 @@
-argon2-cffi==20.1.0
-async-generator==1.10
-attrs==21.2.0
-backcall==0.2.0
-bleach==3.3.0
-cached-property==1.5.2
-cffi==1.14.5
-cycler==0.10.0
-Cython==0.29.23
-decorator==5.0.9
-defusedxml==0.7.1
-entrypoints==0.3
-fast5-research==1.2.22
-future==0.18.2
-h5py==2.8.0
-importlib-metadata==4.5.0
-ipykernel==5.5.5
-ipython==7.24.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-jedi==0.18.0
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.1
-mappy==2.20
-MarkupSafe==2.0.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-mistune==0.8.4
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
-numpy==1.20.3
+cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
+certifi==2021.5.30
+cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1613413856675/work
+dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1615224146321/work
+future @ file:///home/conda/feedstock_root/build_artifacts/future_1610147328086/work
+h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1617739423465/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1621419064915/work
+mappy==2.17
+MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668064/work
+mkl-service==2.3.0
+numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1610324545699/work
 ont-fast5-api==3.3.0
 ont-tombo==1.5.1
 packaging==20.9
-pandas==1.2.4
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-progressbar2==3.53.1
 progressbar33==2.4
-prometheus-client==0.11.0
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-pycparser==2.20
-Pygments==2.9.0
+pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
+pyfaidx @ file:///opt/conda/conda-bld/pyfaidx_1614521783277/work
 pyparsing==2.4.7
-pyrsistent==0.17.3
-pysam==0.16.0.1
-python-dateutil==2.8.1
-python-utils==2.5.6
-pytz==2021.1
-pyzmq==22.1.0
-qtconsole==5.1.0
-QtPy==1.9.0
-scikit-learn==0.24.2
-scipy==1.6.3
-Send2Trash==1.5.0
-six==1.16.0
-sklearn==0.0
-terminado==0.10.0
-testpath==0.5.0
-threadpoolctl==2.1.0
-torch==1.8.1
-tornado==6.1
-tqdm==4.61.0
-traitlets==5.0.5
-typing-extensions==3.10.0.0
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.4.1
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
+rpy2 @ file:///home/conda/feedstock_root/build_artifacts/rpy2_1622818589294/work
+scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1604304777848/work
+simplegeneric==0.8.1
+six @ file:///tmp/build/80754af9/six_1623709665295/work
+torch @ file:///home/conda/feedstock_root/build_artifacts/pytorch-recipe_1619039021772/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1623518955413/work
+typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1611751222202/work
+tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
