--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,176 @@
-cached-property @ file:///tmp/build/80754af9/cached-property_1600785575025/work
-certifi==2021.5.30
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1613413856675/work
-dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1615224146321/work
-future @ file:///home/conda/feedstock_root/build_artifacts/future_1610147328086/work
-h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1617739423465/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1621419064915/work
-mappy==2.17
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1621455668064/work
-mkl-service==2.3.0
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1610324545699/work
-ont-fast5-api==3.3.0
-ont-tombo==1.5.1
-packaging==20.9
-progressbar33==2.4
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyfaidx @ file:///opt/conda/conda-bld/pyfaidx_1614521783277/work
-pyparsing==2.4.7
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
-rpy2 @ file:///home/conda/feedstock_root/build_artifacts/rpy2_1622818589294/work
-scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy_1604304777848/work
-simplegeneric==0.8.1
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-torch @ file:///home/conda/feedstock_root/build_artifacts/pytorch-recipe_1619039021772/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1623518955413/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1611751222202/work
-tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=1_llvm
+_pytorch_select=0.1=cpu_0
+_r-mutex=1.0.1=anacondar_1
+binutils_impl_linux-64=2.35.1=h27ae35d_9
+binutils_linux-64=2.35=h67ddf6f_30
+blas=1.0=mkl
+bwidget=1.9.14=ha770c72_0
+bzip2=1.0.8=h7f98852_4
+c-ares=1.17.1=h7f98852_1
+ca-certificates=2021.5.30=ha878542_0
+cached-property=1.5.2=py_0
+cairo=1.16.0=h6cf1ce9_1008
+certifi=2021.5.30=py36h5fab9bb_0
+cffi=1.14.5=py36hc120d54_0
+curl=7.77.0=hea6ffbf_0
+dataclasses=0.8=pyh787bdff_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=hab24e00_0
+fontconfig=2.13.1=hba837de_1005
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+freetype=2.10.4=h0708190_1
+fribidi=1.0.10=h36c2ea0_0
+future=0.18.2=py36h5fab9bb_3
+gcc_impl_linux-64=9.3.0=h70c0ae5_19
+gcc_linux-64=9.3.0=hf25ea35_30
+gettext=0.19.8.1=h0b5b191_1005
+gfortran_impl_linux-64=9.3.0=hc4a2995_19
+gfortran_linux-64=9.3.0=hdc58fab_30
+graphite2=1.3.13=h58526e2_1001
+gsl=2.6=he838d99_2
+gxx_impl_linux-64=9.3.0=hd87eabc_19
+gxx_linux-64=9.3.0=h3fbe746_30
+h5py=2.10.0=nompi_py36h4510012_106
+harfbuzz=2.8.1=h83ec7ef_0
+hdf5=1.10.6=nompi_h6a2412b_1114
+icu=68.1=h58526e2_0
+intel-openmp=2019.4=243
+jbig=2.1=h7f98852_2003
+jinja2=3.0.1=pyhd8ed1ab_0
+jpeg=9d=h36c2ea0_0
+kernel-headers_linux-64=2.6.32=h77966d4_13
+krb5=1.19.1=hcc1bbae_0
+ld_impl_linux-64=2.35.1=h7274673_9
+lerc=2.2.1=h9c3ff4c_0
+libblas=3.9.0=8_mkl
+libcblas=3.9.0=8_mkl
+libcurl=7.77.0=h2574ce0_0
+libdeflate=1.7=h7f98852_5
+libedit=3.1.20191231=he28a2e2_2
+libev=4.33=h516909a_1
+libffi=3.3=he6710b0_2
+libgcc-devel_linux-64=9.3.0=h7864c58_19
+libgcc-ng=9.3.0=h2828fa1_19
+libgfortran-ng=9.3.0=hff62375_19
+libgfortran5=9.3.0=hff62375_19
+libglib=2.68.3=h3e27bee_0
+libgomp=9.3.0=h2828fa1_19
+libiconv=1.16=h516909a_0
+liblapack=3.9.0=8_mkl
+libmklml=2019.0.5=0
+libnghttp2=1.43.0=h812cca2_0
+libpng=1.6.37=h21135ba_2
+libprotobuf=3.15.8=h780b84a_0
+libssh2=1.9.0=ha56f1ee_6
+libstdcxx-devel_linux-64=9.3.0=hb016644_19
+libstdcxx-ng=9.3.0=hd4cf53a_17
+libtiff=4.3.0=hf544144_1
+libuuid=2.32.1=h7f98852_1000
+libwebp-base=1.2.0=h7f98852_2
+libxcb=1.13=h7f98852_1003
+libxml2=2.9.12=h72842e0_0
+llvm-openmp=11.1.0=h4bd325d_1
+lz4-c=1.9.3=h9c3ff4c_0
+make=4.3=hd18ef5c_1
+mappy=2.17=py36h30a8e3e_3
+markupsafe=2.0.1=py36h8f6f2f9_0
+mkl=2020.4=h726a3e6_304
+mkl-service=2.3.0=py36he8ac12f_0
+ncurses=6.2=he6710b0_1
+ninja=1.10.2=hff7bd54_1
+numpy=1.19.5=py36h2aa4a07_1
+ont-fast5-api=3.3.0=pypi_0
+ont-tombo=1.5.1=py36r36hb3f55d8_0
+openssl=1.1.1k=h7f98852_0
+packaging=20.9=pypi_0
+pango=1.48.5=hb8ff022_0
+pcre=8.45=h9c3ff4c_0
+pip=21.1.2=pyhd8ed1ab_0
+pixman=0.40.0=h36c2ea0_0
+progressbar33=2.4=pypi_0
+pthread-stubs=0.4=h36c2ea0_1001
+pycparser=2.20=py_2
+pyfaidx=0.5.9.5=pyh3252c3a_0
+pyparsing=2.4.7=pypi_0
+python=3.6.13=hffdb5ce_0_cpython
+python_abi=3.6=1_cp36m
+pytorch=1.8.0=cpu_py36h2d15a6b_1
+pytz=2021.1=pyhd8ed1ab_0
+r-assertthat=0.2.1=r36h6115d3f_2
+r-base=3.6.3=hbcea092_8
+r-cli=2.5.0=r36hc72bb7e_0
+r-colorspace=2.0_1=r36hcfec24a_0
+r-crayon=1.4.1=r36hc72bb7e_0
+r-digest=0.6.27=r36h03ef668_0
+r-ellipsis=0.3.2=r36hcfec24a_0
+r-fansi=0.4.0=r36h96ca727_0
+r-farver=2.1.0=r36h03ef668_0
+r-ggplot2=3.1.1=r36h6115d3f_0
+r-glue=1.4.2=r36hcfec24a_0
+r-gridextra=2.3=r36h6115d3f_1003
+r-gtable=0.3.0=r36h6115d3f_3
+r-labeling=0.4.2=r36h142f84f_0
+r-lattice=0.20_44=r36hcfec24a_0
+r-lazyeval=0.2.2=r36hcfec24a_2
+r-lifecycle=1.0.0=r36hc72bb7e_0
+r-magrittr=2.0.1=r36hcfec24a_1
+r-mass=7.3_54=r36hcfec24a_0
+r-matrix=1.2_17=r36h96ca727_0
+r-mgcv=1.8_28=r36h96ca727_0
+r-munsell=0.5.0=r36h6115d3f_1003
+r-nlme=3.1_152=r36h859d828_0
+r-pillar=1.6.1=r36hc72bb7e_0
+r-pkgconfig=2.0.3=r36h6115d3f_1
+r-plyr=1.8.6=r36h0357c0b_1
+r-r6=2.5.0=r36hc72bb7e_0
+r-rcolorbrewer=1.1_2=r36h6115d3f_1003
+r-rcpp=1.0.6=r36h03ef668_0
+r-reshape2=1.4.4=r36h0357c0b_1
+r-rlang=0.4.11=r36hcfec24a_0
+r-scales=1.1.1=r36h6115d3f_0
+r-stringi=1.6.2=r36hcabe038_0
+r-stringr=1.4.0=r36h6115d3f_2
+r-tibble=3.1.2=r36hcfec24a_0
+r-utf8=1.2.1=r36hcfec24a_0
+r-vctrs=0.3.8=r36hcfec24a_1
+r-viridislite=0.4.0=r36hc72bb7e_0
+r-withr=2.4.2=r36hc72bb7e_0
+readline=8.1=h27cfd23_0
+rpy2=3.4.5=py36r36h4d9540e_0
+scipy=1.5.3=py36h9e8f40b_0
+sed=4.8=he412f7d_0
+setuptools=49.6.0=py36h5fab9bb_3
+simplegeneric=0.8.1=py_1
+six=1.16.0=pyhd3eb1b0_0
+sleef=3.5.1=h7f98852_1
+sqlite=3.35.4=hdfb4753_0
+sysroot_linux-64=2.12=h77966d4_13
+tk=8.6.10=hbc83047_0
+tktable=2.10=hb7b940f_3
+tqdm=4.61.1=pyhd8ed1ab_0
+typing-extensions=3.7.4.3=hd3eb1b0_0
+typing_extensions=3.7.4.3=pyh06a4308_0
+tzdata=2020f=h52ac0ba_0
+tzlocal=2.1=pyh9f0ad1d_0
+wheel=0.36.2=pyhd3eb1b0_0
+xorg-kbproto=1.0.7=h7f98852_1002
+xorg-libice=1.0.10=h7f98852_0
+xorg-libsm=1.2.3=hd9c2040_1000
+xorg-libx11=1.7.2=h7f98852_0
+xorg-libxau=1.0.9=h7f98852_0
+xorg-libxdmcp=1.1.3=h7f98852_0
+xorg-libxext=1.3.4=h7f98852_1
+xorg-libxrender=0.9.10=h7f98852_1003
+xorg-renderproto=0.11.1=h7f98852_1002
+xorg-xextproto=7.3.0=h7f98852_1002
+xorg-xproto=7.0.31=h7f98852_1007
+xz=5.2.5=h7b6447c_0
+zlib=1.2.11=h7b6447c_3
+zstd=1.5.0=ha95c52a_0
