--- a/.gitignore
+++ b/.gitignore
@@ -132,7 +132,6 @@ qualimap/
 .vscode/
 acinetobacter_data/
 chiron_reproduction.ipynb
-databases/
 flappie/
 initial_exercise.ipynb
 marios_data/
@@ -140,3 +139,4 @@ output.bam
 speech_recognition_tutorial.ipynb
 thomas_data/
 flappie.zip
+saved_models/
