--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,28 @@ toy_dataset/
 databases/working_3xr6/filename_mapping.txt
 databases/working_ap/reference.fasta
 databases/working_porcupine/reference.fasta
+databases/working_ap/filter_reads.sh.o4069990.4
+databases/working_ap/annotate_and_resquiggle.sh.e4069846.1
+databases/working_ap/annotate_and_resquiggle.sh.e4069846.2
+databases/working_ap/annotate_and_resquiggle.sh.e4069846.3
+databases/working_ap/annotate_and_resquiggle.sh.e4069846.4
+databases/working_ap/annotate_and_resquiggle.sh.o4069846.1
+databases/working_ap/annotate_and_resquiggle.sh.o4069846.2
+databases/working_ap/annotate_and_resquiggle.sh.o4069846.3
+databases/working_ap/annotate_and_resquiggle.sh.o4069846.4
+databases/working_ap/filter_reads.sh.e4069990.1
+databases/working_ap/filter_reads.sh.e4069990.2
+databases/working_ap/filter_reads.sh.e4069990.3
+databases/working_ap/filter_reads.sh.e4069990.4
+databases/working_ap/filter_reads.sh.o4069990.1
+databases/working_ap/filter_reads.sh.o4069990.2
+databases/working_ap/filter_reads.sh.o4069990.3
+databases/toy_working_3xr6/
+databases/toy_working_ap/
+databases/reference_porcupine/
+databases/reference_ap/
+data/
+proof_3xr6_bad_quality/
+librispeech_data/
+LibriSpeech/
+DeepSpeech/
